2006-03-17 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: moved comment to correct position
	* src/Win_GParted.cc: fixed issues with mountpoints containing
	  underscores and/or spaces.
	  
2006-03-16 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Win_GParted.cc: fixed visual feedback while mounting a partition

2006-03-16 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* include/Win_GParted.h,
	  src/Win_GParted.cc: added submenu with mountpoints to 'mount' in
	  partitionmenu. (see also #330327)

2006-03-16 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* compose/.cvsignore: added *.swp
	* compose/README: corrected url

2006-03-16 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/ext2.cc,
	  src/ext3.cc,
	  src/fat16.cc,
	  src/fat32.cc,
	  src/jfs.cc,
	  src/ntfs.cc,
	  src/reiser4.cc,
	  src/reiserfs.cc,
	  src/xfs.cc: changed statusmessage, fixed issue with exit_status and
	  tested/confirmed succesfull usage of Partition::get_path() in
	  Set_Used_Sectors() of all filesystems.
	  
2006-03-15 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Device.h,
	  src/Device.cc: overloaded == and !=
	* src/Win_GParted.cc: cleanups

2006-03-15 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Dialog_Partition_Info.cc,
	  src/DrawingAreaVisualDisk.cc: cleanups

2006-03-15 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Partition.h,
	  src/Dialog_Partition_Info.cc,
	  src/GParted_Core.cc,
	  src/Partition.cc,
	  src/TreeView_Detail.cc,
	  src/Win_GParted.cc: Made Partition::mountpoints private
	  
2006-03-14 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* changed the way devices and partitions store their devicepaths.
	  Instead of holding a 'realpath' and a symbolic path we store paths
	  in a list. This allows for improved detection of mountpoins, free
	  space, etc..

	  Also fixed a nasty bug which showed up when you copy a partition
	  from one device to another. (thanks to mario for the report)

2006-03-09 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Makefile.am,