@@ -1,3 +1,12 @@
+2006-03-18 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/DrawingAreaVisualDisk.h,
+	  src/DrawingAreaVisualDisk.cc: another change to highlighting of
+	  selected partition.
+	* include/Partition.h,
+	  src/Win_GParted.cc: deal properly with just formatted partitions
+	* src/Operation.cc: added FIXME
+
 2006-03-17 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/GParted_Core.cc: moved comment to correct position
